# IsingFantasyMapGenerator

./: CMakeLists.txt  main.cpp  readme.md
include/: map.hh  renderer.hh  spin_lattice.hh  utils.hh
src/: map.cpp  renderer.cpp  spin_lattice.cpp
